# rocket

./: .dockerignore  .gitignore  Dockerfile  README.md  arctogether.py  bot.py  clean-up.py  demo-async.py  demo.py  disco.json  halloween.py  intro.md  pets.py  pyproject.toml  quantum.py  rctogether.py  restore_pets.py  rocket.py  save_bots.py  test_pets.py
demos/: demo-eventlet.py  demo-threads.py  demo.py
pets/: __init__.py  __main__.py  constants.py  parser.py  update_queues.py
public/: index.html
tests/: test_update_queues.py
