[project]
name = "rocket"
version = "0.1.0"
description = ""
authors = [
    {name = "Adam Kelly", email = "adam@cthulahoops.org"}
]
requires-python = ">=3.11"
dependencies = [
    "rctogether>=0.3.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.5",
    "black>=23.11.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pets"]
